--- a/apache.yml
+++ b/apache.yml
@@ -4,11 +4,26 @@
   hosts: linux
   become: true
 
+  handlers:
+    - name: restart apache
+      service:
+        name: httpd
+        state: restarted 
+
   tasks:
     - name: ensure apache is installed
       yum:
         name: httpd
         state: present
+
+    - name: copy test config file
+      copy:
+        src: apachetest.conf
+        dest: /etc/httpd/conf.d/apachetest.conf
+      notify: restart apache
+
+    - name: ensure handlers flush immediately
+      meta: flush_handlers
 
     - name: ensure apache is started
       service:
