added memcached handler

--- a/apache.yml
+++ b/apache.yml
@@ -10,6 +10,11 @@
         name: httpd
         state: restarted 
 
+    - name: restart memcached
+      service:
+        name: memcached
+        state: restarted
+
   tasks:
     - name: ensure apache is installed
       yum:
@@ -20,10 +25,12 @@
       copy:
         src: apachetest.conf
         dest: /etc/httpd/conf.d/apachetest.conf
-      notify: restart apache
+      notify: 
+        - restart apache
+        - restart memcached
 
-    - name: ensure handlers flush immediately
-      meta: flush_handlers
+    #- name: ensure handlers flush immediately
+    #  meta: flush_handlers
 
     - name: ensure apache is started
       service:
